crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__pod__basic_pod.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  POD
    POD block "=pod\nContent\n=cut"
