crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__success__pod__pod_at_eof.pl.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: rendered
---
ROOT
  POD
    POD block "=pod\nContent without cut\n"
